# embedded-mp3-rust

./: .gitmodules  Cargo.toml  Readme.md  build.rs
ffi/: bindgen.h  minimp3.c
minimp3-sys/: Cargo.toml  build.rs
minimp3-sys/src/: bindings.rs  lib.rs
src/: bindings.rs  ffi.rs  lib.rs
